[package]
name = "overf"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/makcandrov/overf"
homepage = "https://github.com/makcandrov/overf"
documentation = "https://docs.rs/overf"
description = "Customize overflow behavior in mathematical operations."
license = "MIT OR Apache-2.0"
keywords = ["overf", "overflow", "checked", "macro"]

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["visit-mut", "full"] }

[lib]
proc-macro = true
